[tool.poetry]
name = "Stock Photo Downloader"
version = "1.7.3"
description = "downloads stock photos based on speech from videos"
authors = ["M1dnightDev <m1dnightgmrofficial@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
moviepy = "1.0.3"
pvleopard = "1.1.5"
ffmpeg = "1.4"
getkey = "^0.6.5"
gingerit = "^0.9.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"